<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTS_interview_Assesment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_label">Login</string>
    <string name="username_hint">Username</string>
    <string name="user_password_hint">Password</string>
    <string name="sign_up_page_label">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email Address</string>
    <string name="signup_button_label">Sign up</string>
    <string name="title_activity_main_inbox_">Main_inbox_Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="sign_up_error_message">please make sure you have entered username,password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_product1">Product1</string>
    <string name="title_activity_product2">Product2</string>
    <string name="title_activity_product3">Product3</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_registered_data">Registered_data</string>
    <string name="title_activity_camera">Camera</string>

</resources>
