<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ribbitandroashok.Login_Activity" >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/username_hint" />

    <TextView
        android:id="@+id/Sign_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
         android:linksClickable="true"
        android:text="@string/sign_up_page_label" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_name"
        android:layout_below="@+id/user_name"
        android:ems="10"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_password"
        android:layout_below="@+id/user_password"
        android:text="@string/login_button_label" />

    <Button
        android:id="@+id/Guest_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Guest Login" />

</RelativeLayout>
